# agent-id

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  claude.yml  publish.yml
cli/: Cargo.toml
cli/src/: main.rs
crates/agent-id/: Cargo.toml  README.md
crates/agent-id-core/: Cargo.toml  README.md
crates/agent-id-core/src/: delegation.rs  did.rs  document.rs  error.rs  keys.rs  lib.rs  receipt.rs
crates/agent-id-core/tests/: vectors.rs
crates/agent-id-core/tests/vectors/: README.md  dids.json  signatures.json
crates/agent-id-handshake/: Cargo.toml  README.md
crates/agent-id-handshake/src/: error.rs  lib.rs  messages.rs  protocol.rs
crates/agent-id/src/: lib.rs
crates/agent-identity/: Cargo.toml  README.md
crates/aip/: Cargo.toml  README.md
crates/aip-core/: Cargo.toml  README.md
crates/aip-core/src/: delegation.rs  did.rs  document.rs  error.rs  keys.rs  lib.rs  lifecycle.rs  receipt.rs  signing.rs
crates/aip-core/tests/: vectors.rs
crates/aip-core/tests/vectors/: README.md  dids.json  handshake.json  signatures.json
crates/aip-handshake/: Cargo.toml  README.md
crates/aip-handshake/src/: error.rs  lib.rs  messages.rs  protocol.rs
crates/aip-log/: Cargo.toml
crates/aip-log/src/: lib.rs
crates/aip-resolver/: Cargo.toml
crates/aip-resolver/src/: lib.rs
crates/aip-trust/: Cargo.toml
crates/aip-trust/src/: lib.rs
crates/aip/src/: lib.rs
docs/: API.md  INTEGRATION.md  PYTHON_SDK.md  QUICKSTART.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  VISION.md
docs/openapi/: log.yaml  relay.yaml  resolver.yaml
examples/: Cargo.toml  basic.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_challenge_deserialize.rs  fuzz_did_parse.rs  fuzz_hello_deserialize.rs
scratch/: 2026-02-06-14-craft-notes.md  2026-02-06-15-craft-notes.md  2026-02-06-16-craft-notes.md  2026-02-06-18-craft-notes.md  2026-02-06-19-craft-notes.md  2026-02-06-20-craft-notes.md
sdk/python/: README.md  pyproject.toml
sdk/python/agent_id/: __init__.py  did.py  document.py  errors.py  keys.py  signing.py
sdk/python/tests/: __init__.py  test_did.py  test_document.py  test_keys.py  test_signing.py
services/log/: Cargo.toml
services/log/src/: main.rs
services/relay/: Cargo.toml
services/relay/src/: main.rs
services/resolver/: Cargo.toml
services/resolver/src/: main.rs
spec/: PROTOCOL.md
tests/: integration.rs
