[workspace]
resolver = "2"
members = [
    "crates/aip-core",
    "crates/aip-handshake",
    "crates/aip-log",
    "crates/aip-resolver",
    "crates/aip-trust",
    "services/resolver",
    "services/log",
    "cli",
    "services/relay",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/AustinEral/api"

[workspace.dependencies]
# Crypto
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
bs58 = "0.5"
base64 = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

# Async
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v7", "serde"] }

# Web
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
