[workspace]
resolver = "2"
members = [
    "crates/aip",
    "crates/aip-core",
    "crates/aip-handshake",
    "cli",
    "examples",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/AustinEral/aip"

[workspace.dependencies]
ed25519-dalek = { version = "2", features = ["rand_core", "zeroize"] }
rand = "0.8"
sha2 = "0.10"
bs58 = "0.5"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_json_canonicalizer = "0.2"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
