[package]
name = "agent-id-cli"
description = "CLI for the Agent Identity Protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agent-id"
path = "src/main.rs"

[dependencies]
agent-id-core = { path = "../crates/agent-id-core" }
agent-id-handshake = { path = "../crates/agent-id-handshake" }
clap = { version = "4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
chrono.workspace = true
hex.workspace = true
directories = "5"

# HTTP server
axum = "0.8"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"
