[package]
name = "aip-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

# AIP crates
aip-core = { path = "../crates/aip-core" }
aip-handshake = { path = "../crates/aip-handshake" }

# For JSON fuzzing
serde_json = "1"

# For custom deserialization
serde = { version = "1", features = ["derive"] }

[[bin]]
name = "fuzz_did_parse"
path = "fuzz_targets/fuzz_did_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_hello_deserialize"
path = "fuzz_targets/fuzz_hello_deserialize.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_challenge_deserialize"
path = "fuzz_targets/fuzz_challenge_deserialize.rs"
test = false
doc = false
bench = false
