[package]
name = "agent-id-handshake"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Handshake protocol for the Agent Identity Protocol"
repository = "https://github.com/AustinEral/agent-id"
documentation = "https://docs.rs/agent-id-handshake"
readme = "README.md"
keywords = ["identity", "authentication", "handshake", "agent", "did"]
categories = ["authentication", "cryptography"]

[dependencies]
agent-id-core = { version = "0.1.0", path = "../agent-id-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }
base64 = "0.22"
ed25519-dalek = "2"
getrandom = "0.3"
hex = "0.4"
