[package]
name = "agent-id"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Agent Identity Protocol - cryptographic identity and authentication for AI agents"
repository = "https://github.com/AustinEral/agent-id"
documentation = "https://docs.rs/agent-id"
readme = "README.md"
keywords = ["identity", "did", "authentication", "agent", "ai"]
categories = ["authentication", "cryptography"]

[dependencies]
agent-id-core = { version = "0.1.0", path = "../agent-id-core" }
agent-id-handshake = { version = "0.1.0", path = "../agent-id-handshake" }
