[package]
name = "aip-core"
description = "Core identity primitives for the Agent Identity Protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ed25519-dalek.workspace = true
rand.workspace = true
sha2.workspace = true
bs58.workspace = true
base64.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_json_canonicalizer.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
