[package]
name = "aip-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Core identity primitives for the Agent Identity Protocol"
repository = "https://github.com/AustinEral/aip"
documentation = "https://docs.rs/aip-core"
readme = "README.md"
keywords = ["identity", "did", "authentication", "agent", "cryptography"]
categories = ["authentication", "cryptography"]

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core", "zeroize"] }
rand = "0.8"
sha2 = "0.10"
bs58 = "0.5"
base64 = "0.22"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_json_canonicalizer = "0.2"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }
