[package]
name = "aip-handshake"
description = "Handshake protocol for the Agent Identity Protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aip-core = { path = "../aip-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
getrandom = "0.3"
hex = "0.4"
