[project]
name = "agent-id"
version = "0.1.0"
description = "Agent Identity Protocol - Python SDK"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "Austin Eral" }]
keywords = ["agent", "identity", "did", "cryptography", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "pynacl>=1.5.0",
    "canonicaljson>=2.0.0",
    "base58>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.19.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.13.0",
]

[project.urls]
Homepage = "https://github.com/AustinEral/agent-id"
Documentation = "https://github.com/AustinEral/agent-id/tree/main/sdk/python"
Repository = "https://github.com/AustinEral/agent-id"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_id"]

[tool.uv]
dev-dependencies = [
    "mypy>=1.19.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.13.0",
]

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = [
    "E4", "E7", "E9",
    "F",
    "I",
    "UP",
    "B",
    "C4",
    "PIE",
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
