[package]
name = "aip-log-service"
description = "Transparency log HTTP service"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aip-core = { path = "../../crates/aip-core" }
aip-log = { path = "../../crates/aip-log" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
