[package]
name = "aip-relay"
description = "Trust Relay Service for the Agent Identity Protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "aip-relay"
path = "src/main.rs"

[dependencies]
aip-core = { path = "../../crates/aip-core" }
aip-trust = { path = "../../crates/aip-trust" }
axum.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
