[package]
name = "aip-resolver-service"
description = "DID resolver HTTP service"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aip-core = { path = "../../crates/aip-core" }
aip-resolver = { path = "../../crates/aip-resolver" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
