[package]
name = "aip-resolver-service"
description = "DID resolver HTTP service"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "aip-resolver"
path = "src/main.rs"

[dependencies]
aip-core = { path = "../../crates/aip-core" }
aip-resolver = { path = "../../crates/aip-resolver" }
axum = "0.8"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
clap = { version = "4", features = ["derive"] }
urlencoding = "2"
